--- a/app/elements/admin/import-catcoder-input.html
+++ b/app/elements/admin/import-catcoder-input.html
@@ -53,7 +53,7 @@
 				e.stopPropagation();
 				this.$.uploadButton.disabled = false;
 				app.stopLoading();
-				page('/challenges/template/' + this.savedTemplate);
+				page('/challenge-template/' + this.savedTemplate);
 			},
 			_onError: function(e, req) {
 				app.stopLoading();
