--- a/app/elements/coder/challenge/available/available-challenges-table.html
+++ b/app/elements/coder/challenge/available/available-challenges-table.html
@@ -60,7 +60,7 @@
 				}
 			},
 			_onClick: function(e, d){
-				page('/contest/' + d.item.challenge.canonicalName + '/info');
+				page('/challenge/' + d.item.challenge.canonicalName + '/info');
 			},
 			_iconForStatus: function(status){
 				switch(status){
