--- a/app/elements/coder/challenge/info/challenge-ended.html
+++ b/app/elements/coder/challenge/info/challenge-ended.html
@@ -40,7 +40,7 @@
 			_challengeIdChanged: function(){
 				var self = this;
 				setTimeout(function(){
-					page('/contest/' + self.challengeId + '/result');
+					page('/challenge/' + self.challengeId + '/result');
 				}, 3000);
 			}
 		});
