--- a/app/elements/coder/challenge/info/guest-challenge-info-page.html
+++ b/app/elements/coder/challenge/info/guest-challenge-info-page.html
@@ -74,7 +74,7 @@
 				}
 			},
 			_onRegister: function(){
-				page('/contest/' + this.challenge.canonicalName + '/register')
+				page('/challenge/' + this.challenge.canonicalName + '/register')
 			}
 		});
 	</script>
