--- a/app/elements/coder/challenge/register-wizard/challenge-register-step.html
+++ b/app/elements/coder/challenge/register-wizard/challenge-register-step.html
@@ -179,7 +179,7 @@
 			},
 			_redirectToInfoPage: function(){
 				this._mainApp.setUser(this.user);
-				page('/contest/' + this.challenge.canonicalName + '/info');
+				page('/challenge/' + this.challenge.canonicalName + '/info');
 			},
 			refresh: function(){
 				this.$$('my-teams-provider').refresh();
