--- a/app/elements/company/challenge/challenge-create.html
+++ b/app/elements/company/challenge/challenge-create.html
@@ -90,7 +90,7 @@
 				}
 			},
 			_onResponse: function(){
-				page('/challenges/' + this.savedChallenge.name);
+				page('/challenge/' + this.savedChallenge.name);
 			}
 		});
 	</script>
