--- a/app/elements/company/challenge/challenge-list.html
+++ b/app/elements/company/challenge/challenge-list.html
@@ -57,7 +57,7 @@
 				}
 			},
 			_createChallenge: function(){
-				page('/challenge/template/'+ this.challengeTemplate.id + '/create');
+				page('/challenge-template/'+ this.challengeTemplate.id + '/create');
 			},
 			_inviteCandidates: function (e) {
 				this.$.inviteCandidatesModal.challenge = e.model.__data__.item;
@@ -69,7 +69,7 @@
 				}
 			},
 			_viewDetail: function(e){
-				page('/challenges/' + e.model.__data__.item.canonicalName);
+				page('/challenge/' + e.model.__data__.item.canonicalName);
 			}
 		});
 	</script>
