--- a/app/elements/company/challenge/challenge-locations-table.html
+++ b/app/elements/company/challenge/challenge-locations-table.html
@@ -36,7 +36,7 @@
 		Polymer({
 			is: 'challenge-locations-table',
 			_editLocations: function() {
-				page('/challenges/' + this.challenge + '/locations/edit');
+				page('/challenge/' + this.challenge + '/locations/edit');
 			}
 		});
 	</script>
