--- a/app/elements/company/task/task-card.html
+++ b/app/elements/company/task/task-card.html
@@ -154,7 +154,7 @@
 			},
 			_viewTaskDetail: function(){
 				if(!this.selectionView){
-					page('/tasks/' + this.task.id);
+					page('/task/' + this.task.id);
 				}else{
 					this._toggleSelectTask();
 				}
