--- a/app/elements/company/task/task-form.html
+++ b/app/elements/company/task/task-form.html
@@ -123,7 +123,7 @@
 				this.$.taskService.save(this.task);
 			},
 			_savedTaskChanged: function(task){
-				page('/tasks/' + task);
+				page('/task/' + task);
 			}
 		});
 	</script>
