--- a/app/elements/company/task/tasks-table.html
+++ b/app/elements/company/task/tasks-table.html
@@ -33,7 +33,7 @@
 				if(d.column.header === 'Options'){
 					return;
 				}
-				page('/tasks/' + d.item.id);
+				page('/task/' + d.item.id);
 			},
 			_formatDuration: function(d){
 				return util.computeDuration(d);
