--- a/app/elements/company/challenge/challenge-detail.html
+++ b/app/elements/company/challenge/challenge-detail.html
@@ -66,7 +66,7 @@
 				}
 			},
 			_editChallengeInfo: function() {
-				page('/challenges/' + this.challenge.canonicalName + '/info/edit')
+				page('/challenge/' + this.challenge.canonicalName + '/info/edit')
 			}
 		});
 	</script>
