--- a/app/elements/company/challenge/challenge-edit-locations.html
+++ b/app/elements/company/challenge/challenge-edit-locations.html
@@ -104,7 +104,7 @@
 				this.$.updateChallengeLocations.generateRequest();
 			},
 			_onResponse: function() {
-				page('/challenges/' + this.canonicalName);
+				page('/challenge/' + this.canonicalName);
 			}
 		});
 	</script>
