send notification email on team invite (coduno 9)

--- a/app/elements/coder/profile/profile-page.html
+++ b/app/elements/coder/profile/profile-page.html
@@ -113,6 +113,7 @@
 			<paper-material class="right" elevation="1">
 			</paper-material>
 		</div>
+		<accept-team-invitation-modal id="acceptTeamInvModal" on-invitation-accepted="_refreshTeams"></accept-team-invitation-modal>
 	</template>
 	<script>
 		// NOTE: username needs to be set for data to be shown.
@@ -127,6 +128,10 @@
 			},
 			_refreshTeams: function(){
 				this.$$('#teamsGrid').refresh();
+			},
+
+			acceptTeamInvitation: function(invitedby, teamname) {
+				this.$.acceptTeamInvModal.toggle(invitedby, teamname);
 			}
 		});
 	</script>
