--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -83,6 +83,7 @@
 <link rel="import" href="coder/team/edit-team-modal.html">
 <link rel="import" href="coder/team/delete-team-modal.html">
 <link rel="import" href="coder/team/invite-to-team-modal.html">
+<link rel="import" href="coder/team/accept-team-invitation-modal.html">
 
 <link rel="import" href="common/coduno-iron-ajax.html">
 
