change to camelCase

--- a/app/elements/coder/profile/profile-page.html
+++ b/app/elements/coder/profile/profile-page.html
@@ -129,8 +129,8 @@
 			_refreshTeams: function(){
 				this.$$('#teamsGrid').refresh();
 			},
-			acceptTeamInvitation: function(invitedby, teamname) {
-				this.$.acceptTeamInvModal.toggle(invitedby, teamname);
+			acceptTeamInvitation: function(invitedBy, teamName) {
+				this.$.acceptTeamInvModal.toggle(invitedBy, teamName);
 			}
 		});
 	</script>
