--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -52,6 +52,7 @@
 
 <link rel="import" href="coder/challenge/tasks/task-display.html">
 <link rel="import" href="coder/challenge/tasks/endpoints/ccc-drone-task.html">
+<link rel="import" href="coder/challenge/tasks/endpoints/ccc-io-task.html">
 <link rel="import" href="coder/challenge/tasks/endpoints/base-components/simple-component.html">
 <link rel="import" href="coder/challenge/tasks/endpoints/base-components/tabbed-component.html">
 <link rel="import" href="coder/challenge/tasks/endpoints/base-components/top-bottom-component.html">
