Fix and prettify challenge page (#320)

--- a/app/elements/coder/challenge/tasks/endpoints/ccc-io-task.html
+++ b/app/elements/coder/challenge/tasks/endpoints/ccc-io-task.html
@@ -1,14 +1,7 @@
-<link rel="import" href="/elements/coder/code-editor/consoles/tabbed-console.html">
-<link rel="import" href="/elements/coder/code-editor/language-selector.html">
-<link rel="import" href="/elements/coder/challenge/tasks/task-display.html">
-<link rel="import" href="/elements/coder/code-editor/code-editor-with-actions.html">
-<link rel="import" href="/elements/coder/input-view/input-view.html">
-<link rel="import" href="/elements/common/leaderboard/challenge-leaderboard.html">
-
-<link rel="import" href="/bower_components/paper-tabs/paper-tabs.html">
-<link rel="import" href="/bower_components/paper-tabs/paper-tab.html">
-<link rel="import" href="/bower_components/iron-icons/av-icons.html">
-<link rel="import" href="/bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../../../../bower_components/paper-tabs/paper-tabs.html">
+<link rel="import" href="../../../../../bower_components/paper-tabs/paper-tab.html">
+<link rel="import" href="../../../../../bower_components/iron-icons/av-icons.html">
+<link rel="import" href="../../../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <dom-module id="ccc-io-task">
 	<style include="iron-flex">
