--- a/app/elements/company/challenge-template/challenge-template-detail.html
+++ b/app/elements/company/challenge-template/challenge-template-detail.html
@@ -43,15 +43,16 @@
 		<div id="wrapper" class="grid mainContent">
 			<div id="descriptionWrapper">
 				<paper-material class="card grid-element" elevation="1">
-					<h1>{{challengeTemplate.name}}</h1>
-					<dl class="dl-horizontal">
-						<dt>Duration</dt>
-						<dd>{{duration}}</dd>
-						<dt>Description</dt>
-						<dd>{{challengeTemplate.description}}</dd>
-						<dt>Instructions</dt>
-						<dd>{{challengeTemplate.instructions}}</dd>
-					</dl>
+					<h2>{{challengeTemplate.name}}</h2>
+					<description-list>
+						<description-list-item label="Duration" value="[[duration]]"></description-list-item>
+						<description-list-item label="Description" content>
+							<render-markdown markdown="[[challengeTemplate.description]]"></render-markdown>
+						</description-list-item>
+						<description-list-item label="Instructions" content>
+							<render-markdown markdown="[[challengeTemplate.instructions]]"></render-markdown>
+						</description-list-item>
+					</description-list>
 				</paper-material>
 				<!--TODO: skills?-->
 				<!--<paper-material class="card grid-element">-->
