--- a/app/elements/common/data-providers/challenge/participation/participants-by-challenge-canonical-name-provider.html
+++ b/app/elements/common/data-providers/challenge/participation/participants-by-challenge-canonical-name-provider.html
@@ -8,7 +8,7 @@
 		<iron-ajax
 			id="request"
 			method="GET"
-			url="[[baseUrl]]/challenges/[[canonicalName]]/participants?location=[[location]]"
+			url="[[baseUrl]]/challenges/[[canonicalName]]/participants"
 			handle-as="json"
 			with-credentials="true"
 			bubbles>
@@ -22,7 +22,7 @@
 				Behaviors.Providers.General
 			],
 			observers: [
-				'_urlChanged(baseUrl, canonicalName, location)'
+				'_urlChanged(baseUrl, canonicalName)'
 			],
 			_urlChanged: function(){
 				this.refresh();
